2014-01-05 Jens Thoms Toerring    <jt@toerring.de>

	* lib/xyplot.c: Stupid bug fixed that could crash the
	program when using an xyplot object.
	* lib/forms.c, lib/object.c: Handling of coordinates
	after call of fl_flip_yorigin() wasn't correct.

2014-01-02 Jens Thoms Toerring    <jt@toerring.de>

	* Final corrections for new 1.2.0 release

2013-12-30 Jens Thoms Toerring    <jt@toerring.de>

	* fdesign: Bug found by Werner Heisch fixed when
	editing several objects at once fixed (all got the
	same label string). Also bug in reset of spinner after
	testing removed.

2013-12-27 Jens Thoms Toerring    <jt@toerring.de>

	* libforms.spec.in: Check added if noarch package can be
	build of the documentation for (open)SUSE. Removed build
	dependencies on libXpm and libjpeg packages, which are
	already required by the libXpm-devel and libjpeg-devel
	packages we depend on. Also added 'mesa-libGL-devel' as
	another build dependency (otherwise libformsGL isn't
	contained in the RPM).

2013-12-22 Jens Thoms Toerring    <jt@toerring.de>

	* libforms.spec.in, Makefile.am: Lots of changes to
	cleanly build rpm packages (with name 'libforms')

2013-12-17 Jens Thoms Toerring    <jt@toerring.de>

	* fdesign: Bug found by Serge Bromow with saving files
	fixed.
	* xforms.spec.in: Patch from Russ Herrold applied.

2013-12-15 Jens Thoms Toerring    <jt@toerring.de>

	* A number of further tweaks to the build system to make
	sure that it also works on older systens (tested CentOS 5)
	applied. An installed version of libtool is now required
	for generating the package from scratch (i.e. with the
	'autogen.sh' script).
	* A few things related to the build system issues in
	fdesign have been fixed.

2013-12-13 Jens Thoms Toerring    <jt@toerring.de>

	* Bug fixes in fdesign: Some xpm files weren't read in
	and editing choice/menu/browser object attributes could
	crash the program
	* Changes to build system to avoid recompilations on
	install